--- a/demo/app/demos/autocomplete/demo.component.html
+++ b/demo/app/demos/autocomplete/demo.component.html
@@ -1,6 +1,6 @@
 <h3>vcl-input with fixed data</h3>
 
-<vcl-embedded-input-group prepIcon="fa:search">
+<vcl-embedded-input-group prepIcon="fas:search">
   <input vcl-input vcl-embedded-input-group placeholder="Search"  [vcl-input-autocomplete]="acCountry" (change)="onChange($event);" />
 </vcl-embedded-input-group>
 
