--- a/demo/app/demos/busy-indicator/demo.component.html
+++ b/demo/app/demos/busy-indicator/demo.component.html
@@ -19,7 +19,7 @@
 <br><br>
 
 <h3>Indicator from icons</h3>
-<vcl-busy-indicator classSrc="fa fa-circle-o-notch fa-spin fa-3x fa-fw">
+<vcl-busy-indicator classSrc="fas fa-circle-o-notch fa-spin fa-3x fa-fw">
   Loading...
 </vcl-busy-indicator>
 <br><br>
