--- a/demo/app/demos/button/demo.component.html
+++ b/demo/app/demos/button/demo.component.html
@@ -2,13 +2,13 @@
 <br><br>
 <button vcl-button (click)="someAction($event)" disabled=true>Disabled button</button>
 <br><br>
-<button vcl-button (click)="someAction($event)" label="Label button with appended icon" appIcon="fa:bolt"></button>
+<button vcl-button (click)="someAction($event)" label="Label button with appended icon" appIcon="fas:bolt"></button>
 <br><br>
-<button vcl-button (click)="someAction($event)" label="Label button with prepended icon" prepIcon="fa:bolt"></button>
+<button vcl-button (click)="someAction($event)" label="Label button with prepended icon" prepIcon="fas:bolt"></button>
 <br><br>
 <button vcl-button (click)="someAction($event)" label="Emphasized label button" class="vclEmphasized"></button>
 <br><br>
-<button vcl-button icon="fa:bolt" title="Square Button" (click)="someAction($event)"></button>
+<button vcl-button icon="fas:bolt" title="Square Button" (click)="someAction($event)"></button>
 <br><br>
 <button vcl-button selectable (select)="someAction($event)">Selectable button</button>
 <br><br>
