--- a/demo/app/demos/icogram/demo.component.html
+++ b/demo/app/demos/icogram/demo.component.html
@@ -1,9 +1,9 @@
 <vcl-icogram label="some label"></vcl-icogram>
 <br><br>
-<vcl-icogram label="icogram with accessible link" prepIcon="fa:chevron-right"></vcl-icogram>
+<vcl-icogram label="icogram with accessible link" prepIcon="fas:chevron-right"></vcl-icogram>
 <br><br>
-<vcl-icogram label="prep/app icons" prepIcon="fa:chevron-right" appIcon="fa:chevron-right"></vcl-icogram>
+<vcl-icogram label="prep/app icons" prepIcon="fas:chevron-right" appIcon="fas:chevron-right"></vcl-icogram>
 <br><br>
-<vcl-icogram label="flex label" prepIcon="fa:chevron-right" appIcon="fa:chevron-right" class="vclLayoutHorizontal" [vclLayout]="{label: 'vclLayoutFlex vclAlignCentered'}"></vcl-icogram>
+<vcl-icogram label="flex label" prepIcon="fas:chevron-right" appIcon="fas:chevron-right" class="vclLayoutHorizontal" [vclLayout]="{label: 'vclLayoutFlex vclAlignCentered'}"></vcl-icogram>
 <br><br>
-This is <span vcl-icogram label="an inline" prepIcon="fa:chevron-right" appIcon="fa:chevron-right"></span> icogram
+This is <span vcl-icogram label="an inline" prepIcon="fas:chevron-right" appIcon="fas:chevron-right"></span> icogram
