--- a/demo/app/demos/layer/bar.component.html
+++ b/demo/app/demos/layer/bar.component.html
@@ -3,7 +3,7 @@
     <h3 class="vclPanelTitle">{{title}}</h3>
     <button type="button" class="vclButton vclTransparent" (tap)="onClose()">
       <div class="vclIcogram">
-        <div class="vclIcon fa fa-times" aria-hidden="true" aria-label="Close" role="img"></div>
+        <div class="vclIcon fas fa-times" aria-hidden="true" aria-label="Close" role="img"></div>
       </div>
     </button>
   </div>
