--- a/demo/app/demos/layer/demo.component.html
+++ b/demo/app/demos/layer/demo.component.html
@@ -14,7 +14,7 @@ Press escape to close the top layer<br><br>
       </h3>
       <button type="button" class="vclButton vclTransparent" (tap)="layerNonModal.close()">
         <div class="vclIcogram">
-          <div class="vclIcon fa fa-times" aria-hidden="true" aria-label="Close" role="img"></div>
+          <div class="vclIcon fas fa-times" aria-hidden="true" aria-label="Close" role="img"></div>
         </div>
       </button>
     </div>
@@ -42,7 +42,7 @@ Press escape to close the top layer<br><br>
       <h3 class="vclPanelTitle">Modal layer title goes here</h3>
       <button type="button" class="vclButton vclTransparent" (tap)="layerModal.close()">
         <div class="vclIcogram">
-          <div class="vclIcon fa fa-times" aria-hidden="true" aria-label="Close" role="img"></div>
+          <div class="vclIcon fas fa-times" aria-hidden="true" aria-label="Close" role="img"></div>
         </div>
       </button>
     </div>
