--- a/demo/app/demos/link/demo.component.html
+++ b/demo/app/demos/link/demo.component.html
@@ -1,5 +1,5 @@
 <h3>Link with action</h3>
-<a vcl-link (tap)="someAction($event)" [label]="'Trigger test action'"></a>
+<a vcl-link href="#" (tap)="someAction($event)" [label]="'Trigger test action'"></a>
 <br><br>
 
 <h3>href attribute only (label is automatically created)</h3>
@@ -10,7 +10,7 @@
 <a vcl-link
   href="'https://github.com/ng-vcl/ng-vcl'"
   [label]="'Example external Link'"
-  [appIcon]="'fa:external-link-alt'"
+  [appIcon]="'fas:external-link-alt'"
   target="'_blank'"></a>
 <br><br>
 
