--- a/demo/app/demos/modal/demo.component.html
+++ b/demo/app/demos/modal/demo.component.html
@@ -4,7 +4,7 @@
 <vcl-modal #modalDelete class="vclDanger">
     <vcl-modal-body>
       <div class="vclIcogram">
-        <div class="vclIcon far fa-question-circle vclScale300p" aria-hidden="true" aria-label="account" role="img"></div>
+        <div class="vclIcon fas fa-question-circle vclScale300p" aria-hidden="true" aria-label="account" role="img"></div>
         <div class="vclText">Do you really want to delete XY?</div>
       </div>
     </vcl-modal-body>
