--- a/demo/app/demos/radio-button/demo.component.html
+++ b/demo/app/demos/radio-button/demo.component.html
@@ -15,7 +15,7 @@
 <h3>With custom content</h3>
 
 <vcl-radio-button [(checked)]="isChecked4">
-  <span vcl-icogram label="Yes" appIcon="fa:check"></span>
+  <span vcl-icogram label="Yes" appIcon="fas:check"></span>
 </vcl-radio-button>
 
 
@@ -32,10 +32,10 @@ State: {{rgValue1}}
 
 <vcl-radio-group [(ngModel)]="rgValue2">
   <vcl-radio-button [value]="'f'">
-    <span vcl-icogram label="Female" appIcon="fa:venus"></span>
+    <span vcl-icogram label="Female" appIcon="fas:venus"></span>
   </vcl-radio-button>
   <vcl-radio-button [value]="'m'">
-    <span vcl-icogram label="Male" appIcon="fa:mars"></span>
+    <span vcl-icogram label="Male" appIcon="fas:mars"></span>
   </vcl-radio-button>
 </vcl-radio-group>
 <br>
