--- a/demo/app/demos/rating/demo.component.html
+++ b/demo/app/demos/rating/demo.component.html
@@ -28,14 +28,14 @@
 <div>Value: {{ customValue }}</div>
 
 <h2>Custom Icons</h2>
-<vcl-rating fullStar="fa fa-battery-full" halfStar="fa fa-battery-half" emptyStar="fa fa-battery-empty" [value]="2.5"></vcl-rating>
+<vcl-rating fullStar="fas fa-battery-full" halfStar="fas fa-battery-half" emptyStar="fas fa-battery-empty" [value]="2.5"></vcl-rating>
 <br>
-<vcl-rating type="small" fullStar="fa fa-hourglass" halfStar="fa fa-hourglass-end" emptyStar="fa fa-hourglass-o"></vcl-rating>
-<vcl-rating type="small" fullStar="fa fa-hourglass" halfStar="fa fa-hourglass-end" emptyStar="fa fa-hourglass-o" [value]="1"></vcl-rating>
-<vcl-rating type="small" fullStar="fa fa-hourglass" halfStar="fa fa-hourglass-end" emptyStar="fa fa-hourglass-o" [value]="2"></vcl-rating>
-<vcl-rating type="small" fullStar="fa fa-hourglass" halfStar="fa fa-hourglass-end" emptyStar="fa fa-hourglass-o" [value]="3"></vcl-rating>
-<vcl-rating type="small" fullStar="fa fa-hourglass" halfStar="fa fa-hourglass-end" emptyStar="fa fa-hourglass-o" [value]="4"></vcl-rating>
-<vcl-rating type="small" fullStar="fa fa-hourglass" halfStar="fa fa-hourglass-end" emptyStar="fa fa-hourglass-o" [value]="5"></vcl-rating>
+<vcl-rating type="small" fullStar="fas fa-hourglass" halfStar="fas fa-hourglass-end" emptyStar="fas fa-hourglass-o"></vcl-rating>
+<vcl-rating type="small" fullStar="fas fa-hourglass" halfStar="fas fa-hourglass-end" emptyStar="fas fa-hourglass-o" [value]="1"></vcl-rating>
+<vcl-rating type="small" fullStar="fas fa-hourglass" halfStar="fas fa-hourglass-end" emptyStar="fas fa-hourglass-o" [value]="2"></vcl-rating>
+<vcl-rating type="small" fullStar="fas fa-hourglass" halfStar="fas fa-hourglass-end" emptyStar="fas fa-hourglass-o" [value]="3"></vcl-rating>
+<vcl-rating type="small" fullStar="fas fa-hourglass" halfStar="fas fa-hourglass-end" emptyStar="fas fa-hourglass-o" [value]="4"></vcl-rating>
+<vcl-rating type="small" fullStar="fas fa-hourglass" halfStar="fas fa-hourglass-end" emptyStar="fas fa-hourglass-o" [value]="5"></vcl-rating>
 
 
 <h2>Custom Scale</h2>
