--- a/lib/ng-vcl/src/modal/modal.component.html
+++ b/lib/ng-vcl/src/modal/modal.component.html
@@ -6,7 +6,7 @@
         <div *ngIf="closeButton || title" class="vclPanelHeader vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter">
           <h3 class="vclPanelTitle">{{title}}</h3>
           <button *ngIf="closeButton" type="button" class="vclButton vclTransparent" (click)="layerModal.close()" >
-            <div class="vclIcogram"><div class="vclIcon fa fa-times" aria-hidden="true" aria-label="Close" role="img"></div></div>
+            <div class="vclIcogram"><div class="vclIcon fas fa-times" aria-hidden="true" aria-label="Close" role="img"></div></div>
           </button>
         </div>
         <div class="vclPanelBody">
