--- a/demo/app/demos/navigation/demo.component.html
+++ b/demo/app/demos/navigation/demo.component.html
@@ -1,9 +1,9 @@
 <h3>Horizontal navigation</h3>
 
 <nav vcl-navigation #nav1 (navigate)="onNavigate($event)" type="horizontal">
-  <vcl-navitem label="Home" prepIcon="fa:home" [route]="['/']"></vcl-navitem>
-  <vcl-navitem label="Products" prepIcon="fa:bicycle" [route]="['/products']"></vcl-navitem>
-  <vcl-navitem label="Contact" prepIcon="fa:envelope" [route]="['/contact']"></vcl-navitem>
+  <vcl-navitem label="Home" prepIcon="fas:home" [route]="['/']"></vcl-navitem>
+  <vcl-navitem label="Products" prepIcon="fas:bicycle" [route]="['/products']"></vcl-navitem>
+  <vcl-navitem label="Contact" prepIcon="fas:envelope" [route]="['/contact']"></vcl-navitem>
 </nav>
 <br>
 
@@ -14,7 +14,7 @@
 
 <nav vcl-navigation #nav2 type="vertical" (navigate)="onNavigate($event)">
   <vcl-navitem label="Home" [route]="['/']"></vcl-navitem>
-  <vcl-navitem label="Products" appIcon="fa:bicycle">
+  <vcl-navitem label="Products" appIcon="fas:bicycle">
     <vcl-navitem label="Product 1" [route]="['/product', 1]"></vcl-navitem>
     <vcl-navitem label="Product 2" [route]="['/product', 2]"></vcl-navitem>
   </vcl-navitem>
@@ -30,21 +30,21 @@
 <nav vcl-navigation #nav3 (navigate)="onNavigate($event)" type="horizontal" (mouseout)="hoverName = undefined">
   <vcl-navitem
     label="Home"
-    prepIcon="fa:home"
+    prepIcon="fas:home"
     [route]="['/']"
     (onLeave)="hoverLastName = 'Home'"
     (onHover)="hoverName = 'Home'">
   </vcl-navitem>
   <vcl-navitem
     label="Products"
-    prepIcon="fa:bicycle"
+    prepIcon="fas:bicycle"
     [route]="['/products']"
     (onLeave)="hoverLastName = 'Products'"
     (onHover)="hoverName = 'Products'">
   </vcl-navitem>
   <vcl-navitem
     label="Contact"
-    prepIcon="fa:envelope"
+    prepIcon="fas:envelope"
     [route]="['/contact']"
     (onLeave)="hoverLastName = 'Contact'"
     (onHover)="hoverName = 'Contact'">
@@ -57,7 +57,7 @@ Last Hovering item: {{ hoverLastName }}
 <h3>Un-Selectable items</h3>
 
 <nav vcl-navigation #nav4 (navigate)="onNavigate($event)" type="horizontal">
-  <vcl-navitem label="Home" prepIcon="fa:home" [route]="['/']" [selectable]="false"></vcl-navitem>
-  <vcl-navitem label="Products" prepIcon="fa:bicycle" [route]="['/products']"></vcl-navitem>
-  <vcl-navitem label="Contact" prepIcon="fa:envelope" [route]="['/contact']" [selectable]="false"></vcl-navitem>
+  <vcl-navitem label="Home" prepIcon="fas:home" [route]="['/']" [selectable]="false"></vcl-navitem>
+  <vcl-navitem label="Products" prepIcon="fas:bicycle" [route]="['/products']"></vcl-navitem>
+  <vcl-navitem label="Contact" prepIcon="fas:envelope" [route]="['/contact']" [selectable]="false"></vcl-navitem>
 </nav>
