icon: Add support for fa5 and mdi to icon resolvers

--- a/demo/app/demos/icon/demo.component.html
+++ b/demo/app/demos/icon/demo.component.html
@@ -1,10 +1,9 @@
 Custom icon (from the <i>Font Awesome</i> icon font):
-<vcl-icon icon="fas fa-cog fa-2x" alt="cog"></vcl-icon>
-
+<vcl-icon icon="fas fa-cog" alt="cog"></vcl-icon>
 <br><br>
 
 Icon provider based (from the <i>Font Awesome</i> icon font):
-<vcl-icon icon="fas:cog:2x" alt="cog"></vcl-icon>
+<vcl-icon icon="fas:cog" alt="cog"></vcl-icon>
 
 <br><br>
 
