--- a/demo/app/demos/icogram/demo.component.html
+++ b/demo/app/demos/icogram/demo.component.html
@@ -1,9 +1,21 @@
-<vcl-icogram label="some label"></vcl-icogram>
+<vcl-icogram prepIcon="fas:chevron-right">icogram with accessible link</vcl-icogram>
 <br><br>
-<vcl-icogram label="icogram with accessible link" prepIcon="fas:chevron-right"></vcl-icogram>
+<vcl-icogram prepIcon="fas:chevron-right" appIcon="fas:chevron-right">prep/app icons</vcl-icogram>
 <br><br>
-<vcl-icogram label="prep/app icons" prepIcon="fas:chevron-right" appIcon="fas:chevron-right"></vcl-icogram>
+
+<a vcl-icogram
+   href="'https://github.com/ng-vcl/ng-vcl'"
+   [prepIcon]="'fas:link'"
+   target="'_blank'">
+   external link with appended icon
+</a>
+  
+  <br><br>
+  
+<a vcl-icogram
+  [prepIcon]="'fas:link'"
+  [href]="'this is not considered when the link is disabled'"
+  [disabled]="true">
+  Disabled link
+</a>
 <br><br>
-<vcl-icogram label="flex label" prepIcon="fas:chevron-right" appIcon="fas:chevron-right" class="vclLayoutHorizontal" [vclLayout]="{label: 'vclLayoutFlex vclAlignCentered'}"></vcl-icogram>
-<br><br>
-This is <span vcl-icogram label="an inline" prepIcon="fas:chevron-right" appIcon="fas:chevron-right"></span> icogram
