--- a/lib/ng-vcl/src/icogram/icogram.component.html
+++ b/lib/ng-vcl/src/icogram/icogram.component.html
@@ -1,8 +1,7 @@
-<div vclLayoutTarget="prepIcon" vcl-icon *ngIf="prepIcon || prepIconSrc" [icon]="prepIcon">
+<vcl-icon *ngIf="prepIcon" [icon]="prepIcon">
   <ng-content select="[prepIcon]"></ng-content>
-</div>
-<div vclLayoutTarget="label" *ngIf="!!label" class="vclText">{{label}}</div>
-<ng-content></ng-content>
-<div vclLayoutTarget="appIcon" vcl-icon *ngIf="appIcon || appIconSrc" [icon]="appIcon">
+</vcl-icon>
+<span class="vclText"><ng-content></ng-content></span>
+<vcl-icon *ngIf="appIcon" [icon]="appIcon">
   <ng-content select="[appIcon]"></ng-content>
-</div>
+</vcl-icon>
