--- a/demo/app/demos/busy-indicator/demo.component.html
+++ b/demo/app/demos/busy-indicator/demo.component.html
@@ -2,47 +2,28 @@
 <vcl-busy-indicator></vcl-busy-indicator>
 <br><br>
 
-<h3>Busy indicator with label and alternative icon</h3>
-<vcl-busy-indicator type="straight">
-  Loading...
-</vcl-busy-indicator>
-<br><br>
-
 <h3>Horizontal busy indicators</h3>
-<vcl-busy-indicator [layout]="'horizontal'">
-  Loading...
-</vcl-busy-indicator>
-<br><br>
-<vcl-busy-indicator [layout]="'horizontal'" type="straight">
-  Loading...
-</vcl-busy-indicator>
+<vcl-busy-indicator [layout]="'horizontal'"></vcl-busy-indicator>
 <br><br>
 
-<h3>Indicator from icons</h3>
-<vcl-busy-indicator classSrc="fas fa-circle-o-notch fa-spin fa-3x fa-fw">
-  Loading...
-</vcl-busy-indicator>
+<h3>Busy indicator with text</h3>
+<vcl-busy-indicator>
+    Loading...
+  </vcl-busy-indicator>
 <br><br>
 
-<h3>Indicator from images</h3>
+<h3>Indicator using icon font</h3>
+<vcl-busy-indicator  icon="fas fa-circle-notch fa-spin fa-3x fa-fw"></vcl-busy-indicator>
+  <br><br>
+
+<h3>Indicator using custom image</h3>
 <vcl-busy-indicator imageSrc="http://www.polidoor.com/assets/img/loading.gif">
   Loading...
 </vcl-busy-indicator>
 <br><br>
 
 <h3>Busy container</h3>
-<div class="vclContainer vclLayoutHorizontal" style="height:15em" [vclBusyIndicatorCover]="isBusy" busyLabel="Loading..." busyIndicatorType="straight">
-  <div style="padding:0.5em" class="vclLayoutFlex">
-    Busy container<br>
-    <button vcl-button (tap)="makeBusy()" label="Make container busy for 3 secs"></button>
-  </div>
-</div>
-<br><br>
-
-<h3>Horizontal busy container</h3>
-<div class="vclContainer vclLayoutHorizontal" style="height:15em" [vclBusyIndicatorCover]="isVerticalBusy" busyLabel="Loading..." busyIndicatorType="circle" busyIndicatorDirection="horizontal">
-  <div style="padding:0.5em" class="vclLayoutFlex">
-    Busy container<br>
-    <button vcl-button (tap)="makeVerticalBusy()" label="Make container busy for 3 secs"></button>
-  </div>
+<div [vcl-busy-indicator-cover]="isBusy" class="vclContainer vclLayoutHorizontal vclLayoutCenterJustified" style="height:15em">
+  <vcl-busy-indicator></vcl-busy-indicator>
+  <button vcl-button (click)="makeBusy()">Make container busy for 3 secs</button>
 </div>
