--- a/lib/ng-vcl/src/busy-indicator/busy-indicator-cover.component.html
+++ b/lib/ng-vcl/src/busy-indicator/busy-indicator-cover.component.html
@@ -1,9 +1,10 @@
 <ng-content></ng-content>
 <div *ngIf="busy" tabindex="-1" class="vclLoadingLayer">
   <div class="vclLoadingLayerContent">
-    <vcl-busy-indicator [type]="busyIndicatorType" [label]="busyLabel" [iconHeight]="busyIconHeight" [iconWidth]="busyIconWidth"
+    <ng-content select="vcl-busy-indicator"></ng-content>
+    <!-- <vcl-busy-indicator [type]="busyIndicatorType" [label]="busyLabel" [iconHeight]="busyIconHeight" [iconWidth]="busyIconWidth"
                         [layout]="busyIndicatorDirection">
       <span *ngIf="busyLabel">{{busyLabel}}</span>
-    </vcl-busy-indicator>
+    </vcl-busy-indicator> -->
   </div>
 </div>
