--- a/demo/app/demos/badge/demo.component.html
+++ b/demo/app/demos/badge/demo.component.html
@@ -1,17 +1,17 @@
 <h3>Default badge</h3>
-<span vcl-badge>default</span>
+<vcl-badge>default</vcl-badge>
 
 <h3>Primary badge</h3>
-<span vcl-badge="primary">primary</span>
+<vcl-badge type="primary">primary</vcl-badge>
 
 <h3>Success badge</h3>
-<span vcl-badge="success">success</span>
+<vcl-badge type="success">success</vcl-badge>
 
 <h3>Info badge</h3>
-<span vcl-badge="info">info</span>
+<vcl-badge type="info">info</vcl-badge>
 
 <h3>Warning badge</h3>
-<span vcl-badge="warning">warning</span>
+<vcl-badge type="warning">warning</vcl-badge>
 
 <h3>Error badge</h3>
-<span vcl-badge="error">error</span>
+<vcl-badge type="error">error</vcl-badge>
