--- a/lib/ng-vcl/src/radio-button/radio-button.component.html
+++ b/lib/ng-vcl/src/radio-button/radio-button.component.html
@@ -1,21 +1,49 @@
-<ng-template #rb>
-  <div class="vclRadioButton" 
-      [class.vclDisabled]="isDisabled" 
-      role="radio" 
-      [attr.tabindex]="tabindex" 
-      [attr.aria-checked]="checked"
-      [attr.aria-disabled]="isDisabled"
-      (keyup)="onKeyup($event)"
-      (blur)="onBlur()"
-      >
-  <div vcl-icon [icon]="icon"></div>
-</div>  
-</ng-template>
+<ng-template #content><ng-content></ng-content></ng-template>
 
-<label vcl-form-control-label [wrapping]="true">
-  <ng-container *ngIf="iconPosition==='left'" [ngTemplateOutlet]="rb"></ng-container>
-  {{label}}  
-  <ng-content></ng-content>
-  <ng-container *ngIf="iconPosition==='right'" [ngTemplateOutlet]="rb"></ng-container>
+<label class="vclFormControlLabel vclFormControlLabelWrapping">
+  <ng-container *ngIf="labelPosition==='before'">
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+  </ng-container>
+
+  <div 
+    class="vclRadioButton" 
+    [class.vclDisabled]="isDisabled" 
+    role="radio" 
+    [attr.tabindex]="tabindex" 
+    [attr.aria-checked]="checked"
+    [attr.aria-disabled]="isDisabled"
+    (keyup)="onKeyup($event)"
+    (blur)="onBlur()"
+    >
+    <vcl-icon [icon]="checked ? 'vcl:circle-checked' : 'vcl:circle'"></vcl-icon>
+  </div>  
+
+  <ng-container *ngIf="labelPosition==='after'">
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+  </ng-container>
 </label>
-  
+
+<!-- <ng-template #content><ng-content></ng-content></ng-template>
+
+<label class="vclFormControlLabel vclFormControlLabelWrapping">
+  <ng-container *ngIf="labelPosition==='before'">
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+  </ng-container>
+
+  <span 
+    class="vclCheckbox" 
+    [class.vclDisabled]="isDisabled" 
+    role="checkbox" 
+    [attr.tabindex]="tabindex" 
+    [attr.aria-checked]="checked"
+    [attr.aria-disabled]="isDisabled"
+    (keyup)="onKeyup($event)"
+    (blur)="onBlur()"
+    >
+    <vcl-icon [icon]="checked ? 'vcl:box-checked' : 'vcl:box'"></vcl-icon>
+  </span>
+
+  <ng-container *ngIf="labelPosition==='after'">
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+  </ng-container>
+</label> -->
